WAM-Studio-SF-Build/force-app/main/default/objects/AI_Recommendation__c/AI_Recommendation__c.object-meta.xml
<CustomObject>
    <description>AI next-best-action / recommendation. Part of Salesforce Wealth AI Studio.</description>
    <label>AI Recommendation</label>
    <nameField>
        <displayFormat>AIR-{00000}</displayFormat>
        <label>AI Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>