WAM-Studio-SF-Build/force-app/main/default/objects/AI_Recommendation__c/fields/AI_Agent_Run__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Run__c</fullName>
    <label>AI Agent Run</label>
    <referenceTo>AI_Agent_Run__c</referenceTo>
    <relationshipLabel>AI Recommendations</relationshipLabel>
    <relationshipName>AI_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>