WAM-Studio-SF-Build/force-app/main/default/objects/AI_Recommendation__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>