WAM-Studio-SF-Build/force-app/main/default/objects/AI_Recommendation__c/fields/Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Type__c</fullName>
    <label>Recommendation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cross-Sell</fullName><default>true</default><label>Cross-Sell</label></value>
            <value><fullName>Retention</fullName><default>false</default><label>Retention</label></value>
            <value><fullName>Rebalance</fullName><default>false</default><label>Rebalance</label></value>
            <value><fullName>Outreach</fullName><default>false</default><label>Outreach</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label>Compliance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>